change headings and button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <title>私の行きたい国 The Counties I want to go</title>
+        <title>私の行きたい国 The Countries I want to go</title>
         <meta name="description" contents="私が今行きたい国々について紹介しています。">
         <meta name="keywords" contents="行きたい国, 海外, 旅行">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
@@ -12,22 +12,24 @@
     </head>
     <body>
         <header>
-                <h1 class="site-title text-center">私の行きたい国<span class="cinzel">The Countries I want to go</span></h1>
+                <h1 class="site-title text-center">私の行きたい国<h2 class="">The Countries I want to go</h2></h1>
         </header>
         <main>
             <section id="countries">
-                <h2 class="text-center cinzel uppercase"> The Countries</h2>
-                <div class="country-box">
-                    <h2 class="text-center cinzel uppercase">Singapore</h2>
-                    <p>高層ビルがそびえるビジネス街と、美しい公園、並木通り、そして観光客を楽しませてくれるリゾートなど、多くの観光地があるシンガポール。特に注目したいスポットは最近常設美術館として設置されたTeam Laboの展示！</p>
-                </div>
-                <div class="country-box">
-                    <h2 class="text-center cinzel uppercase">Australia</h2>
-                    <p>美しいビーチ，雄大な大自然，そして可愛い動物たち。日本では味わえないような自然に囲まれた生活ができるオーストラリア。日本人観光客も多く、治安も良いため安心して旅行を楽しむことができるとこも魅力。</p>
-                </div>
-                <div class="country-box">
-                    <h2 class="text-center cinzel uppercase">England</h2>
-                    <p>首都のロンドンやエジンバラ、バッキンガム宮殿など、見逃せない観光スポットが盛りだくさんなイギリス。何と言っても映画ハリーポッターの撮影地を巡ることができるのが一番の魅力！様々な遺跡にも注目。</p>
+                <h3 class="text-center cinzel uppercase"> The Countries</h3>
+                <div class="container">
+                    <div class="country-box">
+                        <h4 class="text-center cinzel uppercase">Singapore</h4>
+                        <p>高層ビルがそびえるビジネス街と、美しい公園、並木通り、そして観光客を楽しませてくれるリゾートなど、多くの観光地があるシンガポール。特に注目したいスポットは最近常設美術館として設置されたTeam Laboの展示！</p>
+                    </div>
+                    <div class="country-box">
+                        <h4 class="text-center cinzel uppercase">Australia</h4>
+                        <p>美しいビーチ，雄大な大自然，そして可愛い動物たち。日本では味わえないような自然に囲まれた生活ができるオーストラリア。日本人観光客も多く、治安も良いため安心して旅行を楽しむことができるとこも魅力。</p>
+                    </div>
+                    <div class="country-box">
+                        <h4 class="text-center cinzel uppercase">England</h4>
+                        <p>首都のロンドンやエジンバラ、バッキンガム宮殿など、見逃せない観光スポットが盛りだくさんなイギリス。何と言っても映画ハリーポッターの撮影地を巡ることができるのが一番の魅力！様々な遺跡にも注目。</p>
+                    </div>
                 </div>
             </section>
             <div class="subscribe">
