add images and change css on the countries

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header>
-                <h1 class="site-title text-center">私の行きたい国<h2 class="">The Countries I want to go</h2></h1>
+                <h1 class="site-title text-center">私の行きたい国<h2 class="text-center cinzel uppercase">The Countries I want to go</h2></h1>
         </header>
         <main>
             <section id="countries">
@@ -20,15 +20,27 @@
                 <div class="container">
                     <div class="country-box">
                         <h4 class="text-center cinzel uppercase">Singapore</h4>
-                        <p>高層ビルがそびえるビジネス街と、美しい公園、並木通り、そして観光客を楽しませてくれるリゾートなど、多くの観光地があるシンガポール。特に注目したいスポットは最近常設美術館として設置されたTeam Laboの展示！</p>
+                        <div class="singapore">
+                            <div class="background">
+                                <p>高層ビルがそびえるビジネス街と、美しい公園、並木通り、そして観光客を楽しませてくれるリゾートなど、多くの観光地があるシンガポール。特に注目したいスポットは最近常設美術館として設置されたTeam Laboの展示！</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="country-box">
                         <h4 class="text-center cinzel uppercase">Australia</h4>
-                        <p>美しいビーチ，雄大な大自然，そして可愛い動物たち。日本では味わえないような自然に囲まれた生活ができるオーストラリア。日本人観光客も多く、治安も良いため安心して旅行を楽しむことができるとこも魅力。</p>
+                        <div class="australia">
+                            <div class="background">
+                                <p>美しいビーチ，雄大な大自然，そして可愛い動物たち。日本では味わえないような自然に囲まれた生活ができるオーストラリア。日本人観光客も多く、治安も良いため安心して旅行を楽しむことができるとこも魅力。</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="country-box">
                         <h4 class="text-center cinzel uppercase">England</h4>
-                        <p>首都のロンドンやエジンバラ、バッキンガム宮殿など、見逃せない観光スポットが盛りだくさんなイギリス。何と言っても映画ハリーポッターの撮影地を巡ることができるのが一番の魅力！様々な遺跡にも注目。</p>
+                        <div class="england">
+                            <div class="background">
+                                <p>首都のロンドンやエジンバラ、バッキンガム宮殿など、見逃せない観光スポットが盛りだくさんなイギリス。何と言っても映画ハリーポッターの撮影地を巡ることができるのが一番の魅力！様々な遺跡にも注目。</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
